--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
             href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
             rel="stylesheet"
         />
-        <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
+        <link
+            href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,700;1,700&display=swap"
+            rel="stylesheet"
+        />
         <title>Thuc hanh Demo</title>
     </head>
     <body>
@@ -94,39 +97,49 @@
                     </div>
                     <ul class="list-client">
                         <li>
-                            <img
-                                src="./asset/img/client-1.svg"
-                                alt="Client 1"
-                                class="client-item"
-                            />
+                            <a href="#!">
+                                <img
+                                    src="./asset/img/client-1.svg"
+                                    alt="Client 1"
+                                    class="client-item"
+                                />
+                            </a>
                         </li>
                         <li>
-                            <img
-                                src="./asset/img/slient-2.svg"
-                                alt="Client 2"
-                                class="client-item"
-                            />
+                            <a href="#!">
+                                <img
+                                    src="./asset/img/slient-2.svg"
+                                    alt="Client 2"
+                                    class="client-item"
+                                />
+                            </a>
                         </li>
                         <li>
-                            <img
-                                src="./asset/img/slient-3.svg"
-                                alt="Client 3"
-                                class="client-item"
-                            />
+                            <a href="#!">
+                                <img
+                                    src="./asset/img/slient-3.svg"
+                                    alt="Client 3"
+                                    class="client-item"
+                                />
+                            </a>
                         </li>
                         <li>
-                            <img
-                                src="./asset/img/slient-4.svg"
-                                alt="Client 4"
-                                class="client-item"
-                            />
+                            <a href="#!">
+                                <img
+                                    src="./asset/img/slient-4.svg"
+                                    alt="Client 4"
+                                    class="client-item"
+                                />
+                            </a>
                         </li>
                         <li>
-                            <img
-                                src="./asset/img/slient-5.svg"
-                                alt="Client 5"
-                                class="client-item"
-                            />
+                            <a href="#!">
+                                <img
+                                    src="./asset/img/slient-5.svg"
+                                    alt="Client 5"
+                                    class="client-item"
+                                />
+                            </a>
                         </li>
                     </ul>
                 </div>
@@ -626,8 +639,14 @@
                         </div>
                     </div>
                     <div class="row row-bottom">
-                        <img src="./asset/img/logo.svg" alt="Besnik" class="logo">
-                        <p class="copyright">Copyright 2020.com, All rights reserved.</p>
+                        <img
+                            src="./asset/img/logo.svg"
+                            alt="Besnik"
+                            class="logo"
+                        />
+                        <p class="copyright">
+                            Copyright 2020.com, All rights reserved.
+                        </p>
                     </div>
                 </div>
             </footer>
