cải thiện header

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     </head>
     <body>
         <main>
-            <!-- ======== HEADER ========== -->
-            <header class="header">
+            <header class="fix-header">
                 <div class="content">
                     <nav class="navbar">
                         <!-- LOGO -->
@@ -41,7 +40,12 @@
                             <a href="#!" class="btn action-btn">Sign up</a>
                         </div>
                     </nav>
-                    <!-- ===== HERO ==== -->
+                </div>
+            </header>
+
+            <!-- ======== HERO ========== -->
+            <div class="header">
+                <div class="content">
                     <div class="hero">
                         <div class="info">
                             <div class="sub-title">
@@ -64,7 +68,7 @@
                         />
                     </div>
                 </div>
-            </header>
+            </div>
             <!-- ========== CLIENTS =============== -->
             <div class="client">
                 <div class="content">
