--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="content">
                     <nav class="navbar">
                         <!-- LOGO -->
-                        <img src="./asset/img/logo.svg" alt="Besnik." />
+                        <a href="#!"><img src="./asset/img/logo.svg" alt="Besnik." /></a>
 
                         <!-- Navigation -->
                         <ul>
