--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <title>Thuc hanh Demo</title>
     </head>
     <body>
-        <main>
+        <main id="home">
             <header class="fix-header">
                 <div class="content">
                     <nav class="navbar">
@@ -27,11 +27,11 @@
 
                         <!-- Navigation -->
                         <ul>
-                            <li><a href="#!">Home</a></li>
-                            <li><a href="#!">Features</a></li>
-                            <li><a href="#!">Services</a></li>
-                            <li><a href="#!">Resources</a></li>
-                            <li><a href="#!">Contact</a></li>
+                            <li><a href="#home">Home</a></li>
+                            <li><a href="#services">Services</a></li>
+                            <li><a href="#features">Features</a></li>
+                            <li><a href="#resources">Resources</a></li>
+                            <li><a href="#contact">Contact</a></li>
                         </ul>
 
                         <!-- Actions -->
@@ -149,7 +149,7 @@
                 </div>
             </div>
             <!-- =========== Guides ============= -->
-            <div class="guides">
+            <div id="services" class="guides">
                 <div class="content">
                     <h2 class="sub-title">How its works?</h2>
                     <p class="desc">
@@ -212,7 +212,7 @@
                 </div>
             </div>
             <!-- ======= Featured =========== -->
-            <div class="featured">
+            <div id="features" class="featured">
                 <div class="content">
                     <header>
                         <h2 class="sub-title">Featured Properties</h2>
@@ -368,7 +368,7 @@
                 </div>
             </div>
             <!-- ======== STATS ============= -->
-            <div class="stats">
+            <div id="resources" class="stats">
                 <div class="content">
                     <div class="row">
                         <div class="img-block">
@@ -556,7 +556,7 @@
                 </div>
             </div>
             <!-- ======= FOOTER ======= -->
-            <footer class="footer">
+            <footer id="contact" class="footer">
                 <div class="content">
                     <div class="row row-top">
                         <!-- colum 1 -->
